syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/wrappers.proto";

option go_package = "github.com/GoSeoTaxi/olegMicroserviceAuth/grpc/pkg/chat_v1;chat_v1";



service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

// Create
message UserChatCreate {
  string username = 1;
}

message CreateRequest {
  repeated UserChatCreate usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}


// Delete
message DeleteRequest {
  int64 id = 1;
}

// SendMessage
message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

